# aus-etf-analyzer

./: README.md  package-lock.json  package.json
.github/workflows/: publish-server-image.yml
client/: .env.production  .eslintrc.cjs  .firebaserc  README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  PortfolioCardList.tsx  PortfolioList.tsx  PortfolioListItem.tsx  PortfolioSummary.tsx  SectorWeightsPie.tsx  camelFetch.ts  data.ts  main.tsx  styles.ts  util.ts
server/: Dockerfile  README.md  database.py  httpsession.py  main.py  models.py  pyproject.toml  scraper.py
server/app/: database.py  main.py  models.py  scraper.py  settings.py
src/: App.tsx  main.tsx
