[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ltrel <79512656+ltrel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlmodel = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
