[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ltrel <79512656+ltrel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
fastapi = "^0.109.2"
sqlmodel = "^0.0.14"
aiohttp = "^3.9.1"
aiolimiter = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
